--- a/rs-libblkid/Cargo.toml
+++ b/rs-libblkid/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arrayref = "0.3.9"
+bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
+thiserror = "2.0.12"
 uuid = "1.16.0"
