--- a/rs-blkid/Cargo.toml
+++ b/rs-blkid/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+byteorder = "1.5.0"
 rs-libblkid = { path = "../rs-libblkid" }
 uuid = "1.16.0"
