--- a/rs-libblkid/Cargo.toml
+++ b/rs-libblkid/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 arrayref = "0.3.9"
 bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
+nix = { version = "0.30.1", features = ["fs"] }
 thiserror = "2.0.12"
 uuid = "1.16.0"
