--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "rs_blkid"
+name = "blockid"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 byteorder = "1.5.0"
-rs-libblkid = { path = "../rs-libblkid" }
+libblockid = { path = "../libblockid" }
 uuid = "1.16.0"
