--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 arrayref = "0.3.9"
+bitflags = "2.9.1"
 bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
 nix = { version = "0.30.1", features = ["fs"] }
