--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -8,6 +8,5 @@ arrayref = "0.3.9"
 bitflags = "2.9.1"
 bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
-nix = { version = "0.30.1", features = ["fs"] }
-thiserror = "2.0.12"
+rustix = { version = "1.0.7", features = ["fs"] }
 uuid = "1.16.0"
