--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -3,6 +3,13 @@ name = "libblockid"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["dos", "gpt"]
+dos = []
+gpt = []
+mac = []
+bsd = []
+
 [dependencies]
 arrayref = "0.3.9"
 bitflags = "2.9.1"
