--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["dos", "gpt"]
+default = ["dos", "gpt", "mac", "bsd"]
 dos = []
 gpt = []
 mac = []
