--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 byteorder = "1.5.0"
+crc = "3.3.0"
 libblockid = { path = "../libblockid" }
 rustix = { version = "1.0.7", features = ["fs"] }
 uuid = "1.16.0"
