--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -4,16 +4,18 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["dos", "gpt", "mac", "bsd"]
+default = ["dos", "gpt", "mac", "bsd", "vfat", "ext"]
 dos = []
 gpt = []
 mac = []
 bsd = []
+vfat = []
+ext = []
 
 [dependencies]
-arrayref = "0.3.9"
 bitflags = "2.9.1"
 bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
+crc = "3.3.0"
 rustix = { version = "1.0.7", features = ["fs"] }
 uuid = "1.16.0"
