skelelton of ext2 kinda there

--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -18,4 +18,5 @@ bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
 byteorder = "1.5.0"
 crc = "3.3.0"
 rustix = { version = "1.0.7", features = ["fs"] }
+thiserror = "2.0.12"
 uuid = "1.16.0"
