--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -2,6 +2,8 @@
 name = "libblockid"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/rysndavjd/blockid"
 
 [features]
 default = []
