started to add support for no_std support

--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -9,13 +9,15 @@ categories = ["filesystem"]
 license = "MIT OR Apache-2.0"
 
 [features]
-default = []
+default = ["std"]
+std = ["zerocopy/std", "bitflags/std", "rustix/std", "linux-raw-sys/std"]
+no_std = []
 
 [dependencies]
-bitflags = { version = "2.9.1"}
+bitflags = { version = "2.9.1", default-features = false }
 crc = "3.3.0"
-linux-raw-sys = { version = "0.10.0", features = ["ioctl"] }
-rustix = { version = "1.0.7", features = ["fs"] }
-thiserror = "2.0.12"
-uuid = "1.16.0"
-zerocopy = { version = "0.8.26", features = ["std", "alloc", "derive"] }
+zerocopy = { version = "0.8.26", default-features = false, features = ["derive", "alloc"] }
+uuid = { version = "1.16.0", features = ["zerocopy"] }
+thiserror = { version = "2.0.12" }
+linux-raw-sys = { version = "0.10.0", default-features = false, features = ["ioctl"] }
+rustix = { version = "1.0.7", default-features = false, features = ["fs", "alloc"] }
