--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -11,7 +11,6 @@ license = "MIT OR Apache-2.0"
 [features]
 default = ["std"]
 std = ["zerocopy/std", "bitflags/std", "rustix/std", "linux-raw-sys/std"]
-no_std = []
 
 [dependencies]
 bitflags = { version = "2.9.1", default-features = false }
@@ -20,3 +19,8 @@ zerocopy = { version = "0.8.26", default-features = false, features = ["derive",
 uuid = { version = "1.16.0", features = ["zerocopy"] }
 linux-raw-sys = { version = "0.10.0", default-features = false, features = ["ioctl"] }
 rustix = { version = "1.0.7", default-features = false, features = ["fs", "alloc"] }
+
+[toolchain]
+channel = "stable"
+components = ["rustc", "rust-std", "cargo", "rust-src", "rustc-dev", "llvm-tools"]
+profile = "minimal"
