--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -2,10 +2,10 @@
 name = "blockid"
 version = "0.1.0"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
-byteorder = "1.5.0"
-crc = "3.3.0"
+clap = { version = "4.5.41", features = ["derive"] }
 libblockid = { path = "../libblockid" }
 rustix = { version = "1.0.7", features = ["fs"] }
 uuid = "1.16.0"
