--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.2.0"
 edition = "2024"
 description = "Block device identification library"
 repository = "https://github.com/rysndavjd/blockid"
-keywords = ["partition", "filesystem", "superblock", "no_std"]
+keywords = ["partition", "filesystem", "superblock"]
 categories = ["filesystem"]
 license = "MIT OR Apache-2.0"
+build = "build.rs"
 
 [features]
 default = []
@@ -16,7 +17,7 @@ bitflags = { version = "2.9.1", default-features = false, features = ["std"] }
 crc = "3.3.0"
 zerocopy = { version = "0.8.26", default-features = false, features = ["derive", "alloc", "std"] }
 uuid = { version = "1.16.0", default-features = false, features = ["zerocopy", "std"] }
-linux-raw-sys = { version = "0.10.0", default-features = false, features = ["ioctl", "std"] }
 rustix = { version = "1.0.7", default-features = false, features = ["fs", "alloc", "stdio", "std"] }
 widestring = { version = "1.2.0", default-features = false, features = ["alloc", "std"] }
 log = "0.4.27"
+thiserror = { version = "2.0.12", default-features = false, features = ["std"]}
