--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 build = "build.rs"
 
 [dependencies]
+bitflags = { version = "2.9.1", features = ["std"] }
 clap = { version = "4.5.41", features = ["derive"] }
 libblockid = { path = "../libblockid" }
 rustix = { version = "1.0.7", features = ["fs"] }
