--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -21,3 +21,4 @@ rustix = { version = "1.0.7", default-features = false, features = ["fs", "alloc
 widestring = { version = "1.2.0", default-features = false, features = ["alloc", "std"] }
 log = "0.4.27"
 thiserror = { version = "2.0.12", default-features = false, features = ["std"]}
+glob = "0.3.3"
