--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -8,6 +8,8 @@ build = "build.rs"
 bitflags = { version = "2.9.1", features = ["std"] }
 clap = { version = "4.5.41", features = ["derive"] }
 libblockid = { path = "../libblockid" }
+log = "0.4.27"
 rustix = { version = "1.0.7", features = ["fs"] }
+simple_logger = "5.0.0"
 thiserror = "2.0.12"
 uuid = "1.16.0"
