--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -23,3 +23,5 @@ log = "0.4.27"
 thiserror = { version = "2.0.12", default-features = false, features = ["std"] }
 glob = "0.3.3"
 crc-fast = { version = "1.4.0", default-features = false, features = ["alloc", "optimize_crc32_auto"] }
+sha2 = { version = "0.10.9" , default-features = false, features = [ "asm", "asm-aarch64", "std"] }
+xxhash-rust = { version = "0.8.15", default-features = false, features = ["std"] }
