--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -25,3 +25,4 @@ glob = "0.3.3"
 crc-fast = { version = "1.4.0", default-features = false, features = ["alloc", "optimize_crc32_auto"] }
 sha2 = { version = "0.10.9" , default-features = false, features = [ "asm", "asm-aarch64", "std"] }
 xxhash-rust = { version = "0.8.15", default-features = false, features = ["std"] }
+libc = "0.2.175"
