--- a/libblockid/Cargo.toml
+++ b/libblockid/Cargo.toml
@@ -23,6 +23,14 @@ log = "0.4.27"
 thiserror = { version = "2.0.12", default-features = false, features = ["std"] }
 glob = "0.3.3"
 crc-fast = { version = "1.4.0", default-features = false, features = ["alloc", "optimize_crc32_auto"] }
-sha2 = { version = "0.10.9" , default-features = false, features = [ "asm", "asm-aarch64", "std"] }
+
+sha2 = { version = "0.10.9" , default-features = false, features = [ "std"] }
+[target.x86_64-unknown-linux-gnu.dependencies]
+sha2 = { version = "0.10.9", default-features = false, features = [ "asm", "std"] }
+[target.aarch64-unknown-linux-gnu.dependencies]
+sha2 = { version = "0.10.9", default-features = false, features = [ "asm", "asm-aarch64", "std"] }
+
 xxhash-rust = { version = "0.8.15", default-features = false, features = ["std"] }
-libc = "0.2.175"
+
+[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
+libc = { version = "0.2.175", default-features = false, features = ["std"] }
