--- a/blockid/Cargo.toml
+++ b/blockid/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 bitflags = { version = "2.9.1", features = ["std"] }
 clap = { version = "4.5.41", features = ["derive"] }
+crc-fast = "1.5.0"
 libblockid = { path = "../libblockid" }
 log = "0.4.27"
 rustix = { version = "1.0.7", features = ["fs"] }
